# computer_science_ubb

./: .gitignore  README.md
bachelor/application/: README.md
bachelor/presentation/: wlad_presentation.pdf:Zone.Identifier
semester1/archives/csa_courses/: Cursuri ASC.rar
semester1/archives/fp_projects/: assignments.rar
semester1/mathematical_analysis/python_homework/: seminar4.py  seminar4_better.py  seminar5.py
semester2/object_oriented_programming/exams/drivers/: CMakeLists.txt  driver.cpp  driver.h  drivers.txt  main.cpp  observer.h  report.cpp  report.h  reports.txt  repository.cpp  repository.h  service.cpp  service.h  subject.cpp  subject.h  ui_user_window.h  user_window.cpp  user_window.h  user_window.ui
semester3/english/: Solving logic puzzles with Prolog_ A case study of Einstein’s Riddle.docx  einstein's_riddle.pl  presentation.txt
semester5/designing_innovative_products/: README.md
semester5/parallel_and_distributed_programming/lab/lab1/: .1.c.swp  CMakeLists.txt  main.cpp
semester5/parallel_and_distributed_programming/lab/lab1/1/: CMakeLists.txt  main.cpp
semester5/parallel_and_distributed_programming/lab/lab1/1/ThreadsManager/: ThreadsManager.h
semester5/parallel_and_distributed_programming/lab/lab1/Bill/: Bill.cpp  Bill.h
semester5/parallel_and_distributed_programming/lab/lab1/Inventory/: Inventory.cpp  Inventory.h
semester5/parallel_and_distributed_programming/lab/lab1/Product/: Product.cpp  Product.h
semester5/parallel_and_distributed_programming/lab/lab1/SalesThread/: SalesThread.cpp  SalesThread.h
(+1502 files in other folders)
